@@ -1,6 +1,7 @@
 ggplot 0.6
 ----------------------------------------
-
+  
+  * new geom_rug to add marginal rug plots
   * all discrete scales now have labels argument which you can use to override the factor levels
   * new stat_spoke to make it possible to use geom_segment parameterised by angle and radius (thanks to Jiho for the suggestion)
   * new stat_function makes it easy to superimpose a function on the plot
